fixed broken overlay formatting on mobile#

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,10 +118,52 @@ body {
 .showcaseimage {
     border-radius: 25px;
     height: auto;
-    max-width: 100%;
+    width: 100%;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.overlay {
+    position: absolute;
+    top: 0;
+    /* Align to the top of the slide-container */
+    left: 0;
+    /* Align to the left of the slide-container */
+    right: 0;
+    /* Align to the right of the slide-container */
+    bottom: 0;
+    background-color: rgba(10, 16, 13, 0.5);
+    border-radius: 25px;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+}
+
+
+.slide-container:hover .overlay {
+    bottom: 0;
+    height: 100%;
+}
+
+.overlay-text {
+    white-space: nowrap;
+    color: #ffe6e8;
+    font-family: "Italiana", sans-serif;
+    font-size: 3rem;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.overlay-text a {
+    text-decoration: none;
+    color: #ffe6e8;
+}
+
 
 /*--------------------------------------------------------------------------------Destinations page */ 
 
@@ -295,9 +337,6 @@ footer {
         position: relative;
 
     }
-
-
-    
 
     .image {
         display: block;
